feat: Expose idnits v3 (#458)
Fixes #457
